フォーム追加テスト

--- a/index.html
+++ b/index.html
@@ -1,12 +1,428 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="dist/output.css" />
-  </head>
-  <body>
-    <h1 class="text-red-500">あああ</h1>
-  </body>
+  <!DOCTYPE html>
+  <html lang="ja">
+    <head>
+      <meta charset="UTF-8" />
+      <meta
+        name="viewport"
+        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
+      />
+      <meta name="robots" content="noindex" />
+      <title>title</title>
+      <meta name="description" content="" />
+      <meta name="keywords" content="" />
+      <link rel="icon" href="static/img/favicon.ico" />
+
+      <link rel="stylesheet" href="./dist/output.css" />
+    </head>
+    <body>
+      <!-- 要注意セクション -->
+      <section class="px-4">
+        <p class="text-center">
+          太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が公開やトラブルの原因になることも・・・
+        </p>
+        <div class="bg-gray-100 py-6">
+          <div class="max-w-md mx-auto px-3">
+            <h2 class="text-center text-2xl font-bold mb-8 text-gray-800">
+              これらに当てはまる業者は
+              <span class="inline-flex items-center gap-1 mt-2">
+                <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+                  >要</span
+                >
+                <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+                  >注</span
+                >
+                <span class="bg-gray-700 text-white px-4 py-2 text-xl font-bold"
+                  >意</span
+                >
+                <span
+                  class="bg-gray-700 text-white px-4 py-2 text-xl font-bold flex items-center justify-center"
+                >
+                  !
+                </span>
+              </span>
+            </h2>
+
+            <!-- チェックリスト -->
+            <div class="space-y-3">
+              <!-- チェック項目1 -->
+              <div class="bg-white shadow-sm p-4 flex items-center gap-4">
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  電力の使用状況やライフスタイルに<br />合わせた提案がない
+                </p>
+              </div>
+
+              <!-- チェック項目2 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  工事に関して詳しい説明が少ない
+                </p>
+              </div>
+
+              <!-- チェック項目3 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  これまでの施工件数が少ない
+                </p>
+              </div>
+
+              <!-- チェック項目4 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  設置後の話が全くない
+                </p>
+              </div>
+
+              <!-- チェック項目5 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  補助金の申請代行やサポートがない
+                </p>
+              </div>
+
+              <!-- チェック項目6 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  設置メーカーやプランを選べない
+                </p>
+              </div>
+
+              <!-- チェック項目7 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  保証・制度についての説明が全くない
+                </p>
+              </div>
+
+              <!-- チェック項目8 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  建物の構造や建築に関しての<br />ノウハウを保有していない
+                </p>
+              </div>
+
+              <!-- チェック項目9 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  相見積もりを取らせてくれない
+                </p>
+              </div>
+              <!-- チェック項目10 -->
+              <div
+                class="bg-white rounded shadow-sm p-4 flex items-center gap-4"
+              >
+                <div
+                  class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                >
+                  <svg
+                    class="w-5 h-5 text-white"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="3"
+                      d="M5 13l4 4L19 7"
+                    />
+                  </svg>
+                </div>
+                <p class="text-gray-700 text-sm leading-relaxed pt-1">
+                  安さのみを売りにしている
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- フォームセクション -->
+      <section class="px-4 py-8">
+        <div class="max-w-md mx-auto bg-[#f5e6dc] p-6 rounded-lg">
+          <form
+            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeQgz2ucxWklPWAdD61TaRH0-gyTh11ixfY1xDrZ9Axw2-2tA/formResponse"
+            method="POST"
+            target="_blank"
+          >
+            <!-- 現在の使用の電気代 -->
+            <div class="mb-8">
+              <label class="block text-gray-800 font-medium mb-4">
+                現在の使用の電気代
+                <span
+                  class="inline-block bg-red-500 text-white text-xs px-2 py-1 ml-2 rounded"
+                  >必須</span
+                >
+              </label>
+              <div class="space-y-3">
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.698604345"
+                    value="5,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                    required
+                  />
+                  <span class="ml-3 text-gray-700">5,000円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.698604345"
+                    value="10,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">10,000円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.698604345"
+                    value="15,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">15,000円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.698604345"
+                    value="20,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">20,000円以上</span>
+                </label>
+                <input type="hidden" name="entry.698604345_sentinel" />
+              </div>
+            </div>
+
+            <!-- 区切り線 -->
+            <hr class="border-gray-400 my-6" />
+
+            <!-- 現在の使用のガス代 -->
+            <div class="mb-6">
+              <label class="block text-gray-800 font-medium mb-4">
+                現在の使用のガス代
+                <span
+                  class="inline-block bg-red-500 text-white text-xs px-2 py-1 ml-2 rounded"
+                  >必須</span
+                >
+              </label>
+              <div class="space-y-3">
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.1234567890"
+                    value="0円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                    required
+                  />
+                  <span class="ml-3 text-gray-700">0円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.1234567890"
+                    value="5,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">5,000円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.1234567890"
+                    value="10,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">10,000円以上</span>
+                </label>
+                <label class="flex items-center cursor-pointer">
+                  <input
+                    type="radio"
+                    name="entry.1234567890"
+                    value="25,000円以上"
+                    class="w-5 h-5 text-gray-600 border-gray-300 focus:ring-0"
+                  />
+                  <span class="ml-3 text-gray-700">25,000円以上</span>
+                </label>
+                <input type="hidden" name="entry.171766517_sentinel" />
+              </div>
+            </div>
+            <button type="submit" name="button" value="送信">送信</button>
+          </form>
+          <iframe name="dummyIframe" style="display: none"></iframe>
+        </div>
+      </section>
+    </body>
+  </html>
 </html>
