--- a/index.html
+++ b/index.html
@@ -20,30 +20,91 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <header class="flex justify-between items-center px-4 py-3 mx-auto">
-      <div class="">
+  <body
+    class="font-sans font-medium tracking-wider leading-relaxed text-basecolor"
+  >
+    <header class="flex justify-between items-center px-2 py-2 mx-auto gap-2">
+      <div class="shrink-0 max-w-[46%]">
         <h1>
           <img
             src="images/logo.webp"
             alt="株式会社Y2ENERGYGROUP"
-            class="w-[220px] h-auto"
+            class="w-full h-auto"
           />
         </h1>
       </div>
-      <div class="flex gap-2">
-        <img src="images/nav1.webp" alt="電話相談" class="w-[100px] h-auto" />
-        <img src="images/nav2.webp" alt="無料相談" class="w-[100px] h-auto" />
+      <div class="flex gap-1 sm:gap-1 shrink-0 max-w-[48%]">
+        <img
+          src="images/nav1.webp"
+          alt="電話相談"
+          class="w-1/2 h-auto object-contain"
+        />
+        <img
+          src="images/nav2.webp"
+          alt="無料相談"
+          class="w-1/2 h-auto object-contain"
+        />
       </div>
     </header>
-    <section></section>
-    <!-- 要注意セクション -->
-    <section class="px-4">
-      <p class="text-center py-6">
+    <!-- FV セクション -->
+    <section class="bg-background">
+      <div class="w-[85%] text-center mx-auto">
+        <p class="py-5">
+          <span class="text-[#d7444a] font-bold">豊富な施工実績</span>と<span
+            class="text-[#d7444a] font-bold"
+            >安心の4大保証</span
+          >で選ばれ続けている<br />Y2ENERGYGROUPにお任せください
+        </p>
+        <a href=""
+          ><img
+            src="images/conv-btn.webp"
+            class="w-[80%] mx-auto"
+            alt="経験豊富なプロに無料相談・見積もりを依頼する"
+        /></a>
+        <div class="flex gap-5 justify-center pt-6 pb-9">
+          <img
+            src="images/fv-2.webp"
+            alt="太陽光発電施工イメージ写真1"
+            class="w-1/4 h-auto object-cover"
+          />
+          <img
+            src="images/fv-3.webp"
+            alt="太陽光発電施工イメージ写真2"
+            class="w-1/4 h-auto object-cover"
+          />
+          <img
+            src="images/fv-4.webp"
+            alt="太陽光発電施工イメージ写真3"
+            class="w-1/4 h-auto object-cover"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- チェックシートセクション -->
+    <section>
+      <div class="bg-background relative">
+        <div class="w-[80%] mx-auto pb-10">
+          <img
+            src="images/kakunin.webp"
+            alt="確認必須！"
+            class="w-[85px] ml-4"
+          />
+          <h2 class="text-[18px] font-bold pt-1 text-center">
+            施工業者選びで失敗しないための<br /><span
+              class="text-[#d7444a] text-3xl font-extrabold tracking-wider"
+              >簡単15秒</span
+            >チェックシート
+          </h2>
+        </div>
+        <div class="absolute bottom-0 left-0 right-0 translate-y-1/2">
+          <img src="images/tri.svg" alt="" class="w-[80%] h-auto mx-auto" />
+        </div>
+      </div>
+      <p class="w-[80%] mx-auto text-center py-6 mt-6">
         太陽光発電や蓄電池を導入する際、<br />「安さ」だけで選んでいませんか？<br />実は、その判断が公開やトラブルの原因になることも・・・
       </p>
-      <div class="bg-gray-100 py-6">
-        <div class="max-w-md mx-auto px-3">
+      <div class="bg-background w-[85%] mx-auto py-6">
+        <div class="max-w-md mx-auto px-3 font-mincho">
           <h2 class="text-center text-2xl font-bold mb-8 text-gray-800">
             これらに当てはまる業者は
             <span class="inline-flex items-center gap-1 mt-2">
@@ -65,7 +126,7 @@
           </h2>
 
           <!-- チェックリスト -->
-          <div class="space-y-3">
+          <div class="space-y-3 font-semibold">
             <!-- チェック項目1 -->
             <div class="bg-white shadow-sm p-4 flex items-center gap-4">
               <div
