--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <!-- チェック項目1 -->
             <div class="bg-white shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -146,7 +146,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 電力の使用状況やライフスタイルに<br />合わせた提案がない
               </p>
             </div>
@@ -154,7 +154,7 @@
             <!-- チェック項目2 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -170,7 +170,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 工事に関して詳しい説明が少ない
               </p>
             </div>
@@ -178,7 +178,7 @@
             <!-- チェック項目3 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -194,7 +194,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 これまでの施工件数が少ない
               </p>
             </div>
@@ -202,7 +202,7 @@
             <!-- チェック項目4 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -218,7 +218,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 設置後の話が全くない
               </p>
             </div>
@@ -226,7 +226,7 @@
             <!-- チェック項目5 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -242,7 +242,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 補助金の申請代行やサポートがない
               </p>
             </div>
@@ -250,7 +250,7 @@
             <!-- チェック項目6 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -266,7 +266,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 設置メーカーやプランを選べない
               </p>
             </div>
@@ -274,7 +274,7 @@
             <!-- チェック項目7 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -290,7 +290,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 保証・制度についての説明が全くない
               </p>
             </div>
@@ -298,7 +298,7 @@
             <!-- チェック項目8 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -314,7 +314,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 建物の構造や建築に関しての<br />ノウハウを保有していない
               </p>
             </div>
@@ -322,7 +322,7 @@
             <!-- チェック項目9 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -338,14 +338,14 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 相見積もりを取らせてくれない
               </p>
             </div>
             <!-- チェック項目10 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-gray-600 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -361,7 +361,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 安さのみを売りにしている
               </p>
             </div>
@@ -371,7 +371,12 @@
     </section>
     <!-- 6つのポイントセクション -->
     <section class="px-4">
-      <div class="py-6 bg-green-500">
+      <img
+        src="images/check.webp"
+        alt="じゃあどんな業者を選べばいいの？"
+        class="w-[70%] mx-auto my-7"
+      />
+      <div class="py-6 green-gradient">
         <div class="max-w-md mx-auto px-3">
           <h2 class="text-center text-2xl font-bold mb-8 text-white">
             施工評者選びで損しないために<br />押さえておきたい<br />
@@ -413,7 +418,7 @@
             <!-- チェック項目1 -->
             <div class="bg-white shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -429,7 +434,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 施工・販売実績が豊富
               </p>
             </div>
@@ -437,7 +442,7 @@
             <!-- チェック項目2 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -453,7 +458,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 最新技術や色んなメーカーを取扱っている
               </p>
             </div>
@@ -461,7 +466,7 @@
             <!-- チェック項目3 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -477,7 +482,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 自社施工しており下請け業者に任せていない
               </p>
             </div>
@@ -485,7 +490,7 @@
             <!-- チェック項目4 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -501,7 +506,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 ライフスタイルに合わせた提案をしてくれる
               </p>
             </div>
@@ -509,7 +514,7 @@
             <!-- チェック項目5 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -525,7 +530,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 安いだけでなく、補償内容も充実している
               </p>
             </div>
@@ -533,7 +538,7 @@
             <!-- チェック項目6 -->
             <div class="bg-white rounded shadow-sm p-4 flex items-center gap-4">
               <div
-                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center mx-[25px]"
+                class="w-7 h-7 bg-green-500 rounded flex items-center justify-center shrink-0"
               >
                 <svg
                   class="w-5 h-5 text-white"
@@ -549,7 +554,7 @@
                   />
                 </svg>
               </div>
-              <p class="text-gray-700 text-sm leading-relaxed pt-1">
+              <p class="text-gray-700 text-sm leading-relaxed">
                 補助金などの制度に詳しい
               </p>
             </div>
